--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+    "test": "echo \"Error: no test specified\" && exit 1",
+	"dev": "nodemon -- main.js",
+	"start": "node main.js" 
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
