--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-	"dev": "nodemon -- main.js",
+	"dev": "nodemon  main.js --  -h localhost -p 3000 -c ./cache",
 	"start": "node main.js" 
 },
   "keywords": [],
